Initial code commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ classifier =
 packages =
     superironic
 
+[entry_points]
+console_scripts =
+    superironic = superironic.cmd.super_ironic:main
+    supernova-keyring = superironic.cmd.keyring:main
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
